--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Mi Página Web</title>
-  <link rel="stylesheet" href="estilos.css"> <!-- Agrega el enlace a tu archivo CSS -->
+  <link rel="stylesheet" href="Stylesheets/estilos.css"> <!-- Agrega el enlace a tu archivo CSS -->
 </head>
 <body>
   <div class="container">
